add clear history feature

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="left">
             <div class="spacer"></div>
-            <button class="btn--clear">Clear All</button>
+            <button id="btn--clear">Clear All</button>
             <div class='templateRender'></div>
         </div>
         <div class="right">
