added repeat json fetch feature

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
     </template>
 </head>
+<!-- https://pokeapi.co/api/v2/pokemon/ditto -->
 
 <body>
     <div class="container">
@@ -31,7 +32,7 @@
         <div class="right">
             <h1>API Explorer</h1>
             <div class="ctaAPI">
-                <input type="text" id="inputField" value="https://pokeapi.co/api/v2/pokemon/ditto" />
+                <input type="text" id="inputField" value="" />
                 <button id="btn--fetch">Get JSON</button>
             </div>
             </button>
